minor quality update
git-svn-id: svn+ssh://svn.code.sf.net/p/openlcb/svn/trunk/prototypes/java@2275 87536cb5-86f1-4cdc-8fc6-3f0f71bcd267